--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "react-slideshow-image": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
