--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://rv1996.github.io/react-web",
   "browserslist": [
     ">0.2%",
     "not dead",
